[Feat] #37 - rival 랭킹 조회 구현